# pico-bridge

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  plan.md
Assets/Plugins/Android/: AndroidManifest.xml
Assets/Prefabs/PicoBridge/: PicoBridgePanel.prefab
Assets/Resources/: PXR_ProjectSetting.asset
Assets/Scenes/: SampleScene.unity
Assets/Scripts/PicoBridge/: PicoBridgeManager.cs
Assets/Scripts/PicoBridge/Camera/: MediaDecoder.cs  RemoteCameraWindow.cs  WebRtcCameraReceiver.cs
Assets/Scripts/PicoBridge/Editor/: PicoBridgeBuild.cs  (+2 more)
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
docs/: architecture.md  development.md  pc-receiver.md  quickstart.md  release.md  troubleshooting.md  unity-app.md  unity-development.md
docs/en/: README.md  pc-receiver.md  unity-development.md
docs/zh/: README.md  pc-receiver.md  unity-development.md
pc_receiver/: README.md  bridge.py  pyproject.toml
pc_receiver/src/pico_bridge/: __init__.py  bridge.py  camera_request.py  cli.py  discovery.py  frame_store.py  frames.py  protocol.py  runtime.py  tcp_server.py  video_sender.py  visualiser.py  webrtc_sender.py
pc_receiver/tests/: test_bridge_api.py  test_bridge_cli.py  test_cli.py  test_discovery.py  test_frame_store.py  test_frames.py  test_tcp_server.py  test_video_sender.py  test_visualiser.py
python/: bridge.py
python/pico_bridge/: tcp_server.py  tracking.py
python/tests/: test_bridge_cli.py  test_protocol.py
(+16 files in other folders)
