[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-bridge-pc-receiver"
version = "0.1.0"
description = "PC-side receiver for the PICO Bridge tracking pipeline"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
pico-bridge-receiver = "pico_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
